Fixed some issues reported by SonarCloud